--- a/web/gestec/usuario/recuperar_contra.xhtml
+++ b/web/gestec/usuario/recuperar_contra.xhtml
@@ -40,8 +40,8 @@
                 </div>
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <h:form style="border-radius: 25px;border: 1px solid gray">
-                        <div style="padding: 10px 20px;">
+                        <div style="padding: 10px 20px;border-radius: 25px;border: 1px solid gray">
+                    <h:form>
                             <center><h3>#{msjGestec.recuperarAcceso}</h3></center>
                             <hr style="border: 1px solid black"/>
                             <i class="fa fa-asterisk" aria-hidden="true"><font face="arial"> &nbsp; #{msjGestec.digiteCorreo}</font></i>
@@ -73,9 +73,9 @@
                             <p></p>
                             <h:commandButton action="#{sesion.validarUsuCorreo()}" value="#{msjGestec.recuperarContra}" class="btn btn-primary"/>
 
-                            <a href="../../index.xhtml"><h:inputText value="#{msjGestec.volver}" class="btn btn-default"/></a>
-                        </div>
+                            <a href="../../index.xhtml"><h:inputText pt:placeholder="#{msjGestec.volver}" class="btn btn-default"/></a>
                     </h:form>
+                        </div>
                 </div>
                 <div class="col-md-3"></div>
             </div>
